--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,58 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "module": "ESNext",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
-    "moduleResolution": "bundler",
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "allowJs": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
+    "compilerOptions": {
+        "target": "ES2020",
+        "useDefineForClassFields": true,
+        "lib": [
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
+        ],
+        "module": "ESNext",
+        "skipLibCheck": true,
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noUncheckedIndexedAccess": true,
+        /* Bundler mode */
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
+        /* Path mapping */
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ],
+            "@components/*": [
+                "./components/*"
+            ],
+            "@lib/*": [
+                "./lib/*"
+            ]
+        },
+        /* Type definitions */
+        "types": [
+            "node",
+            "vite/client"
+        ]
     },
-    "allowImportingTsExtensions": true,
-    "noEmit": true
-  }
+    "include": [
+        "src/**/*",
+        "components/**/*",
+        "lib/**/*",
+        "electron/**/*",
+        "types.ts",
+        "App.tsx",
+        "index.tsx"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "dist-electron"
+    ]
 }
