--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/adm-zip": "^0.5.7",
+    "@types/cheerio": "^0.22.35",
+    "adm-zip": "^0.5.16",
     "axios": "^1.13.2",
+    "cheerio": "^1.2.0",
     "electron-store": "^11.0.2",
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
